argocd/setup/patch-expose-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  loadBalancerIP: 192.168.0.210
  type: LoadBalancer
