argocd/setup/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: "argocd-web"
  namespace: "argocd"

spec:
  entryPoints:
    - web

  routes:
    - match: "Host(`argocd.tlake.io`)"
      kind: Rule
      services:
        - name: "argocd-server"
          port:  "http"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: "argocd-websecure"
  namespace: "argocd"

spec:
  entryPoints:
    - websecure

  routes:
    - match: "Host(`argocd.tlake.io`)"
      kind: Rule
      services:
        - name: "argocd-server"
          port:  "https"

  tls:
    certResolver: "production"
